--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ body{
     border: 1px solid salmon;
     border-radius: 10px;
     margin: 15px;
+    display: flex;
     justify-content: flex-end;
     align-items: flex-end;
 }
@@ -80,6 +81,6 @@ body{
     font-size: 20px;
 }
 
-.curtent{ 
+.current{ 
     font-size: 30px;
 }
