--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ body{
     border-radius: 10px;
     margin: 15px;
     display: flex;
+    flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
 }
